--- a/_posts/2020-1-4-Craft.md
+++ b/_posts/2020-1-4-Craft.md
@@ -2,7 +2,7 @@
 date: 2020-1-4 23:48:05
 layout: post
 title: HackTheBox - Craft
-subtitle: Craft from HackThebox
+subtitle: Created by: Yuns
 description: >-
   It was very easy Web Challenge.
 image: >-
