--- a/_posts/2020-1-4-Craft.md
+++ b/_posts/2020-1-4-Craft.md
@@ -4,7 +4,7 @@ layout: post
 title: HackTheBox - Craft
 subtitle: "Created by: Yuns"
 description: >-
-  It was very easy Web Challenge.
+  Created by: Yuns
 image: >-
   /assets/img/hackthebox/Craft/Banner.png
 optimized_image: >-
