change first post title

--- a/_posts/2020-01-11-شروع.md
+++ b/_posts/2020-01-11-شروع.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: امنیت فیزیکی
-subtitle: "هر آنچه که نیاز است برای حفاظت از دارایی هایمان در دنیای واقعی بدانید"
+subtitle: "هر آنچه که نیاز است برای حفاظت از دارایی هایمان در دنیای واقعی بدانیم"
 description: >-
   تست
 image: >-
